# zcode-bench

./: .gitignore  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/configs/: default.toml  development.toml
src-tauri/protocol/: Cargo.toml  Makefile.toml
src-tauri/protocol/src/: http.rs  lib.rs  register_client.rs  upload.rs
src-tauri/server/: Cargo.toml  UsersOP 005workspacecode
src-tauri/server/configs/: default.toml
src-tauri/server/src/: file_system.rs  lib.rs  listener.rs  main.rs  restful_api.rs  settings.rs
src-tauri/server/src/file_system/: fs_operate.rs  restful.rs  upload.rs
src-tauri/src/: client.rs  file_system.rs  main.rs  my_err.rs  settings.rs  utils.rs
src-tauri/src/file_system/: upload.rs
src-tauri/src/utils/: http.rs
src/components/: FileItem.vue
src/scripts/: fs.ts
src/views/: Filemanager.vue
