[package]
name = "zcode-bench"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[workspace]
members = ["protocol"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.30.0", features = ["full"] }
anyhow = "1.0.72"
walkdir = "2.3.3"
path-slash = "0.2.1"
tokio-util = { version = "0.7.8", features = ["full"] }
protocol = { version = "0.1.0", path = "protocol" }
futures = "0.3.28"
tracing = "0.1.37"
bytes = "1.4.0"
tracing-subscriber = "0.3.17"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
reqwest = "0.11.18"
derive_more = { version = "0.99.17", default-features = false, features = [
    "deref",
    "deref_mut",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tracing-test = "0.2.4"
