[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bytes = "1.4.0"
futures = "0.3.28"
path-slash = "0.2.1"
serde = "1.0.183"
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"


[dependencies.protocol]
path = "../protocol"
